# website

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy.sh  dfx.json
rust/: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css
rust/src/: lib.rs
rust/testing/: capture.ts  package-lock.json  package.json
rust/testing/preview_output/: summary.json
src/alex_landing_page_backend/: Cargo.toml
src/alex_landing_page_frontend/: index.html  package.json
src/alex_landing_page_frontend/src/: App.jsx  index.scss
typescript/: CLAUDE.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  vite.config.js
