[package]
name = "alexandria-landing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
lto = true
opt-level = 'z'
