[package]
name = "alexandria-landing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.29"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["image", "http"] }
image = { version = "0.25", default-features = false, features = ["png"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Location", "console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
env_logger = "0.11"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"

[profile.release]
lto = true
opt-level = 'z'
strip = true
